--- a/main.ipynb
+++ b/main.ipynb
@@ -93,6 +93,96 @@
     "a=sum()\n",
     "print(a)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "89679d26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from contextlib import contextmanager\n",
+    "\n",
+    "@contextmanager\n",
+    "def mock_json_file():\n",
+    "    try:\n",
+    "        json_file = open('mock.json', 'a')\n",
+    "        yield json_file\n",
+    "    finally:\n",
+    "        json_file.close()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "19d1679e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with mock_json_file() as f:\n",
+    "    \n",
+    "    f.write('{\"key\": \"value\"}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "1456d09c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'generator' object has no attribute 'write'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mmock_json_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mwrite\u001b[49m(\u001b[33m'\u001b[39m\u001b[33m{\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mkey\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m: \u001b[39m\u001b[33m\"\u001b[39m\u001b[33mvalue\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m}\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'generator' object has no attribute 'write'"
+     ]
+    }
+   ],
+   "source": [
+    "mock_json_file().write('{\"key\": \"value\"}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "f26033c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import json\n",
+    "data={\n",
+    "    \"name\":'srinivas'\n",
+    "}\n",
+    "with open('mock.json','w')as json_file:\n",
+    "    data=json.dump(data,json_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d66d94ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\"name\": \"Alice\", \"age\": 30, \"is_student\": False}\n",
+    "json_string = json.dumps(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09514475",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json"
+   ]
   }
  ],
  "metadata": {
